Add some images, resize some images to smaller

--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -1,4 +1,4 @@
-- name: Lisa Dowd-Robinson<
+- name: Lisa Dowd-Robinson
   review: Clean rooms, friendly staff, Hot shower and free continental breakfast. Conveniently located right off the highway, but still very quiet.
   image: /assets/images/lisa.png
 
