--- a/_data/gallery_rooms.yml
+++ b/_data/gallery_rooms.yml
@@ -8,5 +8,5 @@
   heading: Double room
   description: This is a double room. It contains two full-sized beds.
 - image: /assets/images/gallery/rooms/jac.jpg
-  heading: Jacuzzi room
-  description: This is a jacuzzi room. It comes with all the amenities as other rooms, as well as a large jacuzzi tub for you to relax with luxury.
+  heading: Jacuzzi suite
+  description: This is a jacuzzi suite. It comes with a king-sized bed and a large jacuzzi tub for you to relax with luxury.
